Fix iOS libwebrtc build after r211960 https://bugs.webkit.org/show_bug.cgi?id=168038

* Source/webrtc/sdk/objc/Framework/Classes/RTCOpenGLVideoRenderer.h:
GlContextType declaration needs to be platform specific here like it is in RTCOpenGLDefines.h



Canonical link: https://commits.webkit.org/185086@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211972 268f45cc-cd09-0410-ab3c-d52691b4dbfc